Separate pages created for content. Text for graphs added

--- a/authors.html
+++ b/authors.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 <!--This is the START of the menu-->
-    <div id="menu-wrapper">
+      <div id="menu-wrapper">
         <div id="main-menu">
             <ul class="collapsible" data-collapsible="accordion">
                 <h3>About</h3>
@@ -175,53 +175,79 @@
 <div id="content">
     <div class="spacer"></div>
     <div class="clr"></div>
-    <p>The Western Australian Alliance to End Homelessness presents the 2022 update to the Western Australian Alliance to End Homelessness Outcomes Measurement Framework: Dashboard <i>(the Dashboard)</i>, which was first released in August 2019, and updated in June 2022.  The Dashboard is an evolving, accessible, and visual platform designed to present and report on outcomes relevant to the key targets of the Western Australian Alliance to End Homelessness (WAAEH). The Dashboard aims to answer the following question: Are we are ‘on track’ to end homelessness in Western Australia?
-        <b>The Western Australian Alliance to End Homelessness is funded by the Sisters of St John of God Ministeries Inc.</b>
-    </p>
+    <p>In the spirit of reconciliation, CSI UWA acknowledges that their operations are situated on Noongar land, and that the Noongar people remain the spiritual and cultural custodians of their land, and continue to practise their values, languages, beliefs, and knowledge. We acknowledge the Traditional Custodians of the country throughout Australia and their connections to land, sea, and community. We pay our respect to their elders and extend that respect to all Aboriginal and Torres Strait Islander peoples.</p>
+       <br>
+    <table class="styled-table">
+    <thead>
+    <tr>
+        <th align="center" colspan="2"><b>Authors and contact information</b></th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td width="50%">
+            Prof Paul Flatau
+        </td>
+        <td width="50%">
+            <a href="mailto:Paul.Flatau@uwa.edu.au">Paul.Flatau@uwa.edu.au</a>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Dr Leanne Lester
+        </td>
+        <td>
+            <a href="mailto:Leanne.Lester@uwa.edu.au">Leanne.Lester@uwa.edu.au</a>
+        </td>
+    </tr>
+    <tr>
+        <td>Dr Michael Kyron
+        </td>
+        <td>
+            <a href="mailto:Michael.Kyron@uwa.edu.au">Michael.Kyron@uwa.edu.au</a>
+        </td>
+    </tr>
+    </tbody>
+</table>
+    <br>
+    <p>
+        <b>Address for Correspondence</b>
+    <br>
+    Professor Paul Flatau
+    <br>
+    Centre for Social Impact
+    <br>
+    The University of Western Australia
+    <br>
+    Business School
+    <br>
+    The University of Western Australia
+    <br>
+    35 Stirling Hwy, Crawley, WA, 6009 Australia
+    <br>
+    <a href="mailto:Paul.Flatau@uwa.edu.au">Paul.Flatau@uwa.edu.au</a>
     <br><br>
-    <div id="Background">
-        <h2>Background</h2>
-        <p>In July 2018, the WAAEH published the Strategy to End Homelessness (the Strategy). The Strategy articulates a 10-year plan to end homelessness in Western Australia, invoking a whole-of-society response. The Strategy comprises nine broad targets across the following areas: reducing and ending homelessness itself; preventing homelessness through addressing ‘structural’ and ‘individual’ drivers of homelessness; improving policy and practice within the service sector; and, improving measurement, accountability, and governance mechanisms. Those targets relating to reducing and preventing homelessness, which have been operationalised and for which data exists, form the backbone of the present version of the Dashboard. </p>
-        <center>
-            <table class="styled-table">
-                <thead>
-                <tr>
-                    <th align="center" colspan="2"><b>Ending Homelessness in Western Australia by 2028</b></th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td><i>Targets for responding to homelessness</i></td>
-                    <td><i>Targets for preventing homelessness</i></td>
-                </tr>
-                <tr>
-                    <td width="50%">
-                        <b>Target 1</b>: Western Australia will have ended all forms of chronic homelessness including chronic rough sleeping.<br>
-                        <b>Target 2</b>: No individual or family in Western Australia will sleep rough or stay in supported accommodation for longer than five nights before moving into an affordable, safe, decent, permanent home with the support required to sustain it.<br>
-                        <b>Target 3</b>: The Western Australian rate of homelessness (including couch surfing and insecure tenure) will have been halved from its 2016 level.<br>
-                        <b>Target 5</b>: The current very large gap between the rate of Aboriginal homelessness and non-Aboriginal homelessness in Western Australia will be eliminated so that the rate of Aboriginal homelessness is no higher than the rate of non-Aboriginal homelessness.<br>
-                        <b>Target 6</b>: Those experiencing homelessness and those exiting homelessness with physical health, mental health, and alcohol and other drug use dependence needs will have their needs addressed. This will result in a halving of mortality rates among those who have experienced homelessness and a halving in public hospital costs one year on for those exiting homelessness.<br>
-                        <b>Target 7</b>: Those experiencing homelessness and those exiting homelessness will be supported to strengthen their economic, social, family and community connections leading to stronger well-being and quality of life outcomes. Employment among those experiencing homelessness will be significantly increased. Over half of those exiting homelessness will be employed within three years of moving into housing. Well-being and quality of life will equal those of the general population in the same timeframe.
-                    </td>
-                    <td width="50%">
-                        <b>Target 4</b>: The underlying causes that result in people becoming homeless have been met head-on, resulting in a reduction by more than half in the inflow of people and families into homelessness in any one year.<br>
-                        <b>Target 8</b>: A strong, collaborative and adaptive network of services and responses across the community services, health, mental health, justice, and education sectors will exist working collectively to address the underlying causes of homelessness and meeting the needs of those who become homeless.<br>
-                        <b>Target 9</b>: Measurement, accountability and governance mechanisms that are robust, transparent and open to external review will be operating, providing an on-going means for assessing progress in meeting the goals of Ending Homelessness in Western Australia in 10 years.<br>
-                    </td>
-                </tr>
-                </tbody>
-                <tfoot>
-                <tr>
-                    <td colspan="2">
-                        <p2>Source: WAAEH Strategy to End Homelessness (2018)</p2>
-                    </td>
-                </tr>
-                </tfoot>
-            </table>
-        </center>
-    </div>
+    <b>Suggested Citation:</b> Flatau P., Lester L., Callis Z., Kyron M. (2022). The Funding of Western Australian Homelessness Services, Perth: The University of Western Australia. https://doi.org/10.25916/xvt3-5c91
+    <br>
+    <b>Keywords</b>: homelessness, Western Australia, funding, housing
+    <br><br>
+    <b>Centre for Social Impact</b>
+    <br>
+    The Centre for Social Impact (CSI) is a national research and education centre dedicated to catalysing social change for a better world. CSI is built on the foundation of four of Australia’s leading universities: UNSW Sydney, The University of Western Australia, Flinders University and Swinburne University of Technology. Our research develops and brings together knowledge to understand current social challenges and opportunities; our postgraduate and undergraduate education develops social impact leaders; and we aim to catalyse change by drawing on these foundations and translating knowledge, creating leaders, developing usable resources, and reaching across traditional divides to facilitate collaborations.
+    <br><br>
+    <b>Acknowledgements</b>
+    <br>
+    The authors acknowledge the assistance of Western Australian homelessness agencies in preparing this report. The authors also drew on material from policy documents, public reports, and media publications.
+    <br>
+    The authors wish to acknowledge the funding of the study by XXX without which the study would not have been possible.
+    <br><br>
+    <b>Disclaimer</b>
+    <br>
+    The opinions in this report reflect the views of the authors and do not necessarily reflect those of the Centre for Social Impact, UWA or XXX.
+    </p>
 
-        <img src="csi-uwa logo.png" width="310" height="90" align="right">
+
+    <img src="csi-uwa logo.png" width="310" height="90" align="right">
 
 
 </div>
