--- a/target1.html
+++ b/target1.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 <!--This is the START of the menu-->
-    <div id="menu-wrapper">
+   <div id="menu-wrapper">
         <div id="main-menu">
             <ul class="collapsible" data-collapsible="accordion">
                 <h3>About</h3>
@@ -157,7 +157,7 @@
     </div>
 <!--END of menu-->
 <!--This is the START of the content-->
-<div id="header">
+<div id="content">
     <table class="header-table" style="border:1">
         <tr>
             <td style="width:70%; vertical-align:top;">
@@ -167,71 +167,80 @@
                 <h4>Version 4.0 (Demo)</h4><br>
             </td>
             <td style="width:30%; vertical-align:top;">
-                <img class="logo" src="waeeh logo with text.png" width="300" height="150">
+                <img src="waeeh logo with text.png" width="300" height="150">
             </td>
         </tr>
     </table>
-</div>
-<div id="content">
     <div class="spacer"></div>
     <div class="clr"></div>
-    <p>The Western Australian Alliance to End Homelessness presents the 2022 update to the Western Australian Alliance to End Homelessness Outcomes Measurement Framework: Dashboard <i>(the Dashboard)</i>, which was first released in August 2019, and updated in June 2022.  The Dashboard is an evolving, accessible, and visual platform designed to present and report on outcomes relevant to the key targets of the Western Australian Alliance to End Homelessness (WAAEH). The Dashboard aims to answer the following question: Are we are ‘on track’ to end homelessness in Western Australia?
-        <b>The Western Australian Alliance to End Homelessness is funded by the Sisters of St John of God Ministeries Inc.</b>
-    </p>
-    <br><br>
-    <div id="Background">
-        <h2>Background</h2>
-        <p>In July 2018, the WAAEH published the Strategy to End Homelessness (the Strategy). The Strategy articulates a 10-year plan to end homelessness in Western Australia, invoking a whole-of-society response. The Strategy comprises nine broad targets across the following areas: reducing and ending homelessness itself; preventing homelessness through addressing ‘structural’ and ‘individual’ drivers of homelessness; improving policy and practice within the service sector; and, improving measurement, accountability, and governance mechanisms. Those targets relating to reducing and preventing homelessness, which have been operationalised and for which data exists, form the backbone of the present version of the Dashboard. </p>
+    <div id="Target-1">
+        <h2>Target 1</h2>
+        <blockquote class="blockquote">
+            <h4><i>Western Australia will have ended all forms of chronic homelessness including chronic rough sleeping</i></h4>
+        </blockquote>
+        <br>
+        <p>The rates of access to SHS reflect the nature of the service system, including the availability and accessibility of services and the types of supports provided. The SHS data indicates that, relative to national rates, Western Australians accessing SHS do so for much shorter support periods and are accommodated for far fewer nights. In 2019-20, the median length of support received was 22 days in Western Australia and 51 days nationally.</p><br>
         <center>
-            <table class="styled-table">
+            <table class="normal-table">
+                <caption style="text-align:left"><p3>Table 1.1. Median length of support, days in support periods and nights accommodated, 2019/20,  and 2020/21, Western Australia and Australia</p3></caption>
                 <thead>
                 <tr>
-                    <th align="center" colspan="2"><b>Ending Homelessness in Western Australia by 2028</b></th>
+                    <th></th>
+                    <th colspan="2" align="center"><p>2019/20</p></td>
+                    <th colspan="2" align="center"><p>2020/21</p></td>
+                </tr>
+                <tr>
+                    <th><p>Support</p></th>
+                    <th><p>Western Australia</p></th>
+                    <th><p>Australia</p></th>
+                    <th><p>Western Australia</p></th>
+                    <th><p>Australia</p></th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr>
-                    <td><i>Targets for responding to homelessness</i></td>
-                    <td><i>Targets for preventing homelessness</i></td>
+                    <td><p>Median length of support (days)</p></td>
+                    <td><p>16</p></td>
+                    <td><p>43</p></td>
+                    <td><p>22</p></td>
+                    <td><p>51</p></td>
                 </tr>
                 <tr>
-                    <td width="50%">
-                        <b>Target 1</b>: Western Australia will have ended all forms of chronic homelessness including chronic rough sleeping.<br>
-                        <b>Target 2</b>: No individual or family in Western Australia will sleep rough or stay in supported accommodation for longer than five nights before moving into an affordable, safe, decent, permanent home with the support required to sustain it.<br>
-                        <b>Target 3</b>: The Western Australian rate of homelessness (including couch surfing and insecure tenure) will have been halved from its 2016 level.<br>
-                        <b>Target 5</b>: The current very large gap between the rate of Aboriginal homelessness and non-Aboriginal homelessness in Western Australia will be eliminated so that the rate of Aboriginal homelessness is no higher than the rate of non-Aboriginal homelessness.<br>
-                        <b>Target 6</b>: Those experiencing homelessness and those exiting homelessness with physical health, mental health, and alcohol and other drug use dependence needs will have their needs addressed. This will result in a halving of mortality rates among those who have experienced homelessness and a halving in public hospital costs one year on for those exiting homelessness.<br>
-                        <b>Target 7</b>: Those experiencing homelessness and those exiting homelessness will be supported to strengthen their economic, social, family and community connections leading to stronger well-being and quality of life outcomes. Employment among those experiencing homelessness will be significantly increased. Over half of those exiting homelessness will be employed within three years of moving into housing. Well-being and quality of life will equal those of the general population in the same timeframe.
-                    </td>
-                    <td width="50%">
-                        <b>Target 4</b>: The underlying causes that result in people becoming homeless have been met head-on, resulting in a reduction by more than half in the inflow of people and families into homelessness in any one year.<br>
-                        <b>Target 8</b>: A strong, collaborative and adaptive network of services and responses across the community services, health, mental health, justice, and education sectors will exist working collectively to address the underlying causes of homelessness and meeting the needs of those who become homeless.<br>
-                        <b>Target 9</b>: Measurement, accountability and governance mechanisms that are robust, transparent and open to external review will be operating, providing an on-going means for assessing progress in meeting the goals of Ending Homelessness in Western Australia in 10 years.<br>
-                    </td>
+                    <td><p>Median length of accommodation (nights)</p></td>
+                    <td><p>8</p></td>
+                    <td><p>28</p></td>
+                    <td><p>8</p></td>
+                    <td><p>31</p></td>
                 </tr>
                 </tbody>
                 <tfoot>
                 <tr>
-                    <td colspan="2">
-                        <p2>Source: WAAEH Strategy to End Homelessness (2018)</p2>
+                    <td colspan="5">
+                        <p2>Source: Specialist Homelessness Services Collection (AIHW, 2022). Specialist Homelessness Services Annual Report (cat no. HOU 322). <a href="https://www.aihw.gov.au/reports/homelessness-services/specialist-homelessness-services-annual-report/contents/summary" target="_blank">https://www.aihw.gov.au/reports/homelessness-services/specialist-homelessness-services-annual-report/contents/summary.</a></p2>
                     </td>
                 </tr>
                 </tfoot>
             </table>
         </center>
+        <br>
+        <p>
+            For the purposes of the WAAEH Dashboard, chronic homelessness is defined as a history of rough sleeping or other forms of homelessness for more than 12 months continuously. There are limited data available that measure chronicity in homelessness.  Our data are from the Advance to Zero national database and were collected using the Vulnerability Index Service Prioritisation Decision Assistance Tool (VI-SPDAT).
+            <br><br>
+            We looked at chronic homelessness in WA which we defined as an answer of more than 12 months to the question: <i>For how many months have you lived on the streets or in emergency accommodation?</i>
+            <br><br>
+            From 1 January 2016 to 30 June 2022, the proportion of respondents exhibiting chronic homelessness varied from 56% to 69%. The peak in the proportion of respondents exhibiting chronic homelessness during 2020 may have been impacted by the effects of COVID-19 and may reflect an increase in the proportion of those chronically homeless in the overall homeless community <b>(Figure 1.1)</b>.
+        </p>
+    <div class='tableauPlaceholder' id='viz1658679521773' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target1-VISPDAT&#47;ProportionofVISPDATrepondentschronicallyhomeless&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Target1-VISPDAT&#47;ProportionofVISPDATrepondentschronicallyhomeless' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target1-VISPDAT&#47;ProportionofVISPDATrepondentschronicallyhomeless&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1658679521773');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='800px';vizElement.style.height='527px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='800px';vizElement.style.height='527px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
     </div>
 
-        <img src="csi-uwa logo.png" width="310" height="90" align="right">
-
+    <img src="csi-uwa logo.png" width="310" height="90" align="right">
 
 </div>
 
-<div id="footer">
+
+<div class='footer'>
 
     <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="images/up.png"></button>
-
-</div>
-
 
 </div>
 
